--- a/jobs/package.json
+++ b/jobs/package.json
@@ -2,18 +2,27 @@
   "name": "jobs",
   "version": "0.0.0",
   "description": "Hello Expo!",
-  "author": null,
+  "author": "Piyush Santwani",
+  "nrpm": {
+    "assets": [
+      "./assets/fonts/"
+    ]
+  },
   "private": true,
   "main": "main.js",
   "dependencies": {
     "axios": "0.15.3",
     "expo": "15.0.2",
+    "frisbee": "^1.6.1",
     "latlng-to-zip": "0.0.1",
     "lodash": "4.17.4",
+    "moment": "^2.19.1",
     "qs": "6.4.0",
     "react": "15.4.0",
     "react-native": "https://github.com/exponent/react-native/archive/sdk-15.0.0.tar.gz",
+    "react-native-country-picker-modal": "^0.3.0",
     "react-native-elements": "0.10.2",
+    "react-native-form": "^2.1.2",
     "react-navigation": "1.0.0-beta.7",
     "react-redux": "5.0.3",
     "redux": "3.6.0",
